<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_call"
        android:title="@string/menu_voice_call"
        android:icon="@drawable/ic_call_white"
        android:contentDescription="Voice call"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_video_call"
        android:title="@string/menu_video_call"
        android:icon="@drawable/ic_videocam"
        android:contentDescription="Video call"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_group_info"
        android:title="@string/menu_group_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_leave_group"
        android:title="@string/menu_leave_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_group"
        android:title="@string/menu_delete_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export"
        android:title="@string/menu_export_conversation"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_background"
        android:title="@string/menu_change_background"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_new_todo"
        android:title="@string/menu_new_todo_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share_location"
        android:title="@string/menu_share_location"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_request_location"
        android:title="@string/menu_request_location"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_load_history"
        android:title="@string/menu_load_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_auto_location"
        android:title="@string/auto_location_off"
        android:orderInCategory="150"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_peer_messages"
        android:title="[DEBUG] Clear received messages"
        android:orderInCategory="200"
        app:showAsAction="never" />

</menu>
