<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_user_call"
        android:title="@string/menu_voice_call" />

    <item
        android:id="@+id/action_user_video_call"
        android:title="@string/menu_video_call" />

    <item
        android:id="@+id/action_user_test_connection"
        android:title="@string/menu_test_connection" />

    <item
        android:id="@+id/action_user_emergency_call"
        android:title="@string/menu_emergency_call" />

    <item
        android:id="@+id/action_user_emergency_location"
        android:title="@string/menu_emergency_call_location" />

    <item
        android:id="@+id/action_user_set_nickname"
        android:title="@string/menu_set_nickname" />

</menu>
